--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ variables:
 
 stages:
   - build
-  - push
 
 build_job:
   image: docker:latest
@@ -12,16 +11,9 @@ build_job:
     - master
   before_script:
     - echo "Start build project clear-chain......"
+  services:
+    - docker:dind
   script:
     - docker build -t clear-chain:latest .
-
-push_job:
-  image: docker:latest
-  stage: push
-  only:
-    - master
-  before_script:
-    - echo 'Start push image to docker hub......'
-  script:
     - docker tag clear-chain:latest wylu1037/hust:clear-chain
     - docker push wylu1037/hust:clear-chain
