--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,6 @@ build_job:
     - docker:dind
   script:
     - docker build -t clear-chain:latest .
+    - echo 'Start push image to docker hub......'
     - docker tag clear-chain:latest wylu1037/hust:clear-chain
     - docker push wylu1037/hust:clear-chain
