--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
-  APP_NAME: clear-chain
+  PROJECT_NAME: clear-chain
+  IMAGE_NAME: clear-chain:latest
 
 stages:
   - build
@@ -10,12 +11,12 @@ build_job:
   only:
     - master
   before_script:
-    - echo "Start build project clear-chain......"
+    - echo "Start build project \"$IMAGE_NAME\"......"
   services:
     - docker:dind
   script:
-    - docker build -t clear-chain:latest .
+    - docker build -t $IMAGE_NAME .
     - echo 'Start push image to docker hub......'
-    - docker login -u wylu1037 -p lwy970515
-    - docker tag clear-chain:latest wylu1037/hust:clear-chain
-    - docker push wylu1037/hust:clear-chain
+    - docker "$HUB_PASSWORD" | login --username $HUB_USERNAME --password-stdin
+    - docker tag $IMAGE_NAME $HUB_USERNAME/hust:$PROJECT_NAME
+    - docker push $HUB_USERNAME/hust:$PROJECT_NAME
