ci: 构建完成退出登录

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,4 @@ build_job:
     - echo "$HUB_PASSWORD" | docker login --username $HUB_USERNAME --password-stdin
     - docker tag $IMAGE_NAME $HUB_USERNAME/hust:$PROJECT_NAME
     - docker push $HUB_USERNAME/hust:$PROJECT_NAME
+    - docker logout
