feat: 删除超级账本合约

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,12 @@ build_job:
   only:
     - master
   before_script:
-    - echo "Start build project \"$IMAGE_NAME\"......"
+    - echo "Start to build project \"$PROJECT_NAME\"......"
   services:
     - docker:dind
   script:
     - docker build -t $IMAGE_NAME .
-    - echo 'Start push image to docker hub......'
+    - echo 'Start to push image \"$IMAGE_NAME\" to docker hub......'
     - echo "$HUB_PASSWORD" | docker login --username $HUB_USERNAME --password-stdin
     - docker tag $IMAGE_NAME $HUB_USERNAME/hust:$PROJECT_NAME
     - docker push $HUB_USERNAME/hust:$PROJECT_NAME
